--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         </a>
         {%- endif -%}
          {%- if site.plainwhite.social_links.stackoverflow -%}
-        <a href="https://stackoverflow.com/users/1053496/{{ site.plainwhite.social_links.stackoverflow }}" target="_blank">
+        <a href="https://stackoverflow.com/users/{{ site.plainwhite.social_links.stackoverflow }}" target="_blank">
           <li>
             <i class="icon-stackoverflow"></i>
           </li>
