--- a/_sass/ext/_fonts.scss
+++ b/_sass/ext/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?94162162');
-  src: url('../font/fontello.eot?94162162#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?94162162') format('woff2'),
-       url('../font/fontello.woff?94162162') format('woff'),
-       url('../font/fontello.ttf?94162162') format('truetype'),
-       url('../font/fontello.svg?94162162#fontello') format('svg');
+  src: url('../font/fontello.eot?18107144');
+  src: url('../font/fontello.eot?18107144#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?18107144') format('woff2'),
+       url('../font/fontello.woff?18107144') format('woff'),
+       url('../font/fontello.ttf?18107144') format('truetype'),
+       url('../font/fontello.svg?18107144#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?94162162#fontello') format('svg');
+    src: url('../font/fontello.svg?18107144#fontello') format('svg');
   }
 }
 */
@@ -24,7 +24,7 @@
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
-  speak: none;
+  speak: never;
 
   display: inline-block;
   text-decoration: inherit;
@@ -56,15 +56,17 @@
 }
 
 .icon-calendar:before { content: '\e800'; } /* '' */
+.icon-calendar-1:before { content: '\e801'; } /* '' */
+.icon-stackoverflow:before { content: '\e802'; } /* '' */
 .icon-search:before { content: '\e805'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-pinterest-squared:before { content: '\f0d3'; } /* '' */
+.icon-youtube:before { content: '\f167'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-flickr:before { content: '\f16e'; } /* '' */
+.icon-dribbble:before { content: '\f17d'; } /* '' */
+.icon-telegram:before { content: '\f2c6'; } /* '' */
 .icon-twitter-squared:before { content: '\f304'; } /* '' */
+.icon-facebook-squared:before { content: '\f308'; } /* '' */
 .icon-linkedin-squared:before { content: '\f30c'; } /* '' */
-.icon-instagram:before { content: '\f16d'; } /* '' */
-.icon-facebook:before { content: '\f308'; } /* '' */
-.icon-youtube:before { content: '\f167'; } /* '' */
-.icon-dribbble:before { content: '\f17d'; } /* '' */
-.icon-flickr:before { content: '\f16e'; } /* '' */
-.icon-telegram:before { content: '\f2c6'; } /* '' */
-.icon-soundcloud:before { content: '\f348'; } /* '' */
-
+.icon-soundcloud:before { content: '\f348'; } /* '' */
