added readmore link

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -247,6 +247,14 @@ main {
   h6 {
     font-family: Raleway, sans-serif;
   }
+  .read-more-link {
+    font-family: Raleway, sans-serif;
+    margin-bottom: 1em;
+  }
+
+  p {
+    margin-bottom: 0.25rem;
+  }
 }
 .posts-labelgroup {
   margin: 0 0 0.67em 0;
